kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kubernetes-todo
  labels:
    app.kubernetes.io/part-of: kubernetes-todo-teacher
